kbcb (0.0.1-4) unstable; urgency=medium

  * Flexible pre-push file (creating if not exist, otherwise, appending)
  * Automatically set pre-push as executable

 -- Tu Phan <tphanson@kambria.io>  Tue, 24 Sep 2019 11:35:03 +0700

kbcb (0.0.1-3) unstable; urgency=medium

  * Using macro for shared data directory
  * Cross platform build (MacOS)
  * Clean header file

 -- Tu Phan <tphanson@kambria.io>  Tue, 23 Sep 2019 00:04:03 -0700

kbcb (0.0.1-2) unstable; urgency=medium

  * Fix shared data directory
  * Check empty .git directory
  * Add explicit errors

 -- Tu Phan <tphanson@kambria.io>  Tue, 19 Sep 2019 2:20:03 -0700

kbcb (0.0.1-1) unstable; urgency=medium

  * Initial release

 -- Tu Phan <tphanson@kambria.io>  Tue, 17 Sep 2019 23:12:03 -0700